Updates regarding MacOS environment